# aoc-2024

./: aoc2024  aoc2024.cabal
inputs/: testCaseDay01.txt
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Main.hs  Test.hs
