cabal-version:   3.0
name:            aoc2024
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable aoc2024
    main-is:          Main.hs
    hs-source-dirs:   src/
    other-modules:
        Test
        Day01
        Day02
        Day03

    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        regex-posix ^>=0.96.0.0
